--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="explanation">
       <p id="explanation-text"></p>
-      <p> TEST </p>p>
+      <p> TEST </p>
       <p><strong>📚 Recommended Resource:</strong><br />
         <a id="resource-link" href="#" target="_blank"></a>
       </p>
