--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <div class="explanation">
       <p id="explanation-text"></p>
-      <p><strong>📚 Recommended Resource:</strong><br />
-        <a id="resource-link" href="#" target="_blank"></a>
+      <p><strong>📚 Recommended Resources:</strong><br />
+        <div id="resource-links"></div>
       </p>
     </div>
   </div>
